--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "<Application Name>",
-    "short_name": "<Application Short Name >",
+    "name": "Saiaf Music App",
+    "short_name": "Space",
     "theme_color": "#1976d2",
     "background_color": "#fafafa",
     "display": "standalone",
